Added jdk.module.path to compiler at runtime; added required libraries to load alifec in distribution module