@@ -1,5 +1,8 @@
 #!/bin/bash
 
 cd ..
-java -classpath "lib/*" alifec.contest.view.ContestUI
+java --module-path lib/ -m alifec.simulation.view/alifec.simulation.main.ALifeContestMain
 
+# --add-modules javafx.base,javafx.graphics,alifec.simulation.view,alifec.core
+# --add-reads javafx.base=ALL-UNNAMED
+# --add-reads javafx.graphics=ALL-UNNAMED
